update loi ​ WebSocket connection

--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
@@ -29,6 +29,10 @@
 <!-- Trung thêm -->
 <link href="/css/mycss.css" rel="stylesheet">
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+
+<script src="/app_js/buyer.js"></script>
+
 </head>
 <body>
 	<div class="body-wrapper">
@@ -140,6 +144,8 @@
 		}
 		// ]]>
 	</script>
+	<!-- <script src="/app_js/buyer.js"></script> -->
+	
 </body>
 
 </html>
