--- a/DATN_F21/src/main/resources/templates/viewsUser/index.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/index.html
@@ -24,15 +24,15 @@
                                             <h6 class="slide-sub-title animated"><img src="/img/icons/icon-img/1.png"
                                                     alt="#"> 100% sản phẩm tự nhiên</h6>
                                             <h1 class="slide-title animated ">Giảm ngay 5% cho<br> đơn hàng từ 99k</h1>
-                                            <div class="slide-brief animated d-none">
+                                            <div class="slide-brief animated ">
                                                 <p><b>Rau củ tươi ngon, đảm bảo chất lượng</b> luôn là <b>tiêu chí hàng
                                                         đầu</b> của website nông sản online của chúng tôi.</p>
                                             </div>
-                                            <div class="btn-wrapper animated">
+                                            <!-- <div class="btn-wrapper animated">
                                                 <a href="shop.html"
                                                     class="theme-btn-1 btn btn-effect-1 text-uppercase">Xem thêm về cửa
                                                     hàng</a>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                     <div class="slide-item-img">
@@ -58,12 +58,12 @@
                                                 <p><b>Rau củ tươi ngon, đảm bảo chất lượng</b> luôn là <b>tiêu chí hàng
                                                         đầu</b> của website nông sản online của chúng tôi.</p>
                                             </div>
-                                            <div class="btn-wrapper animated">
+                                            <!-- <div class="btn-wrapper animated">
                                                 <a href="shop.html"
                                                     class="theme-btn-1 btn btn-effect-1 text-uppercase">Xem thêm về cửa
                                                     hàng</a>
-                                                <!-- <a href="about.html" class="btn btn-transparent btn-effect-3 text-uppercase">LEARN MORE</a> -->
-                                            </div>
+                                                <a href="about.html" class="btn btn-transparent btn-effect-3 text-uppercase">LEARN MORE</a>
+                                            </div> -->
                                         </div>
                                     </div>
                                     <div class="slide-item-img slide-img-left">
