--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/address.html
@@ -7,12 +7,25 @@
 		    <div class="ltn__myaccount-tab-content-inner">
 		        <p>Các địa chỉ sau sẽ được sử dụng trên trang thanh toán</p>
 		        <div class="row">
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 1: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
-		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
+		            <div class=" col-3 learts-mb-30">
+		                <!-- <h4>Địa chỉ 1: <small>
+											<a href="/account/add_address">Sửa</a>
+											<a href="/account/add_address">Xóa</a>
+										</small></h4>
+		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p> -->
+						<label style="color: rgba(85,85,85,.8);">Họ Và Tên</label>
+						<label style="color: rgba(85,85,85,.8);">Số Điện Thoại</label>
 		            </div>
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 2: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
+					<div class=" col-6 learts-mb-30">
+		                <label>Nguyễn Văn A</label><br>
+						<label>0987878765</label>
+		            </div>
+					<div class=" col-3 learts-mb-30">
+						<a href="/account/add_address" style="margin-right: 15px;">Sửa</a>
+						<a href="/account/add_address">Xóa</a>										
+		            </div>
+		            <!-- <div class="col-md-12 col-12 learts-mb-30">
+		                <h4>Địa chỉ 2: <small><a href="/account/add_addresse">chỉnh sửa</a></small></h4>
 		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
 		            </div>
 		            <div class="col-md-12 col-12 learts-mb-30">
@@ -22,9 +35,10 @@
 		            <div class="col-md-12 col-12 learts-mb-30">
 		                <h4>Địa chỉ 4: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
 		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
-		            </div>
-		            <a type="submit" href="/account/add_address" class="btn theme-btn-1 btn-effect-1 text-uppercase">THÊM ĐỊA CHỈ MỚI</a>
-		        </div>
+		            </div> -->
+				</div>
+		            <a type="submit" href="/account/addaddress" class="btn theme-btn-1 btn-effect-1 text-uppercase">THÊM ĐỊA CHỈ MỚI</a>
+		        
 		    </div>
 		</div>
 	</main>
