--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -45,7 +45,7 @@
 						</div>
 						<!-- mini-cart -->
 						<div class="mini-cart-icon">
-							<a th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
+							<a th:href="@{|/buyer/cart|}"> <i class="icon-shopping-cart"></i>
 								<sup>2</sup>
 							</a>
 						</div>
