--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -24,8 +24,8 @@
 						</div>
 					</div>
 					<div class="col">
-						<form id="#" method="get" action="#" class="mt-30">
-							<input class="input-find" type="text" name="ltn__name"
+						<form id="#" method="get" action="/search" class="mt-30">
+							<input class="input-find" type="text" name="name"
 								required="required" placeholder="Tìm kiếm sản phẩm...">
 							<button class="theme-btn-1 btn-find" type="submit">
 								<i class="icon-search"></i>
