--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
@@ -33,8 +33,10 @@
 
 <script src="/app_js/buyer.js"></script>
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
-<body>
+<body ng-app="buyer-app" ng-controller="buyer-ctrl">
 	<div class="body-wrapper">
 		<nav>
 			<div th:replace="/layoutUser/_menu.html"></div>
