--- a/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
@@ -39,14 +39,14 @@
 							<label for="" class="footer-item">Giờ hàng</label>
 						</div>
 					</div>
-					<div class="grid_column_3" style="margin-left: 80px">
+					<div class="grid_column_3" style="margin-left: 30px">
 						<h4 class="footer_heading">Hướng dẫn</h4>
 						<label for="" class="footer-item">Hướng dẫn thanh toán</label><br>
 						<label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
 						<label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
 						<label for="" class="footer-item">Hướng dẫn giao nhận</label>
 					</div>
-					<div class="grid_column_3" style="margin-left: 80px">
+					<div class="grid_column_3" >
 						<h4 class="footer_heading">Chính sách</h4>
 						<label for="" class="footer-item">Chính sách vận chuyển</label> <br>
 						<label for="" class="footer-item">Chính sách bảo mật</label><br>
