--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -46,7 +46,7 @@
 						<!-- mini-cart -->
 						<div class="mini-cart-icon">
 							<a th:href="@{|/buyer/cart|}"> <i class="icon-shopping-cart"></i>
-								<sup>2</sup>
+								<sup>{{cart.count}}</sup>
 							</a>
 						</div>
 						<!-- mini-cart -->
