--- a/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
@@ -35,29 +35,7 @@
                     <div class="col-lg-12">
                         <div class="ltn__checkout-inner">
                             <div class="ltn__checkout-single-content ltn__returning-customer-wrap">
-                                <!-- <h5>Returning customer? <a class="ltn__secondary-color" href="#ltn__returning-customer-login" data-toggle="collapse">Click here to login</a></h5>
-                                <div id="ltn__returning-customer-login" class="collapse ltn__checkout-single-content-info">
-                                    <div class="ltn_coupon-code-form ltn__form-box">
-                                        <p>Please login your accont.</p>
-                                        <form action="#">
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="input-item input-item-name ltn__custom-icon">
-                                                        <input type="text" name="ltn__name" placeholder="Enter your name">
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="input-item input-item-email ltn__custom-icon">
-                                                        <input type="email" name="ltn__email" placeholder="Enter email address">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <button class="btn theme-btn-1 btn-effect-1 text-uppercase">Login</button>
-                                            <label class="input-info-save mb-0"><input type="checkbox" name="agree"> Remember me</label>
-                                            <p class="mt-30"><a href="register.html">Lost your password?</a></p>
-                                        </form>
-                                    </div>
-                                </div> -->
+                               
                             </div>
                             <div class="ltn__checkout-single-content mt-50">
                                 <h4 class="title-2">Chi tiết thanh toán</h4>
@@ -83,28 +61,10 @@
                                                         id="txtSdt" disabled="disabled">
                                                 </div>
                                             </div>
-                                            <!-- <div class="col-md-6">
-                                                <div class="input-item input-item-website ltn__custom-icon">
-                                                    <input type="text" name="ltn__phone" placeholder="Company address (optional)">
-                                                </div>
-                                            </div> -->
+                                            
                                         </div>
                                         <div class="row">
-                                            <!-- <div class="col-lg-4 col-md-6">
-                                                <h6>Country</h6>
-                                                <div class="input-item">
-                                                    <select class="nice-select">
-                                                    <option>Select Country</option>
-                                                    <option>Australia</option>
-                                                    <option>Canada</option>
-                                                    <option>China</option>
-                                                    <option>Morocco</option>
-                                                    <option>Saudi Arabia</option>
-                                                    <option>United Kingdom (UK)</option>
-                                                    <option>United States (US)</option>
-                                                </select>
-                                                </div>
-                                            </div> -->
+                                           
                                             <div class="col-lg-12 col-md-12">
                                                 <h6>ĝịa chỉ</h6>
                                                 <div class="row">
@@ -121,164 +81,49 @@
                                                     type="submit" style="float: right">Thay đổi</button>
                                             </div>
                                         </div>
-                                        <!-- <p><label class="input-info-save mb-0"><input type="checkbox" name="agree"> Create an account?</label></p>
-                                        <h6>Order Notes (optional)</h6>
-                                        <div class="input-item input-item-textarea ltn__custom-icon">
-                                            <textarea name="ltn__message" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
-                                        </div> -->
+                                        
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="row">
-                        <div class="col-lg-12">
-                            <div class="shoping-cart-total">
-                                <h4 class="title-2">Tổng số mặt hàng</h4>
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="card">
-                                            <table class="table">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">#</th>
-                                                        <th scope="col">First</th>
-                                                        <th scope="col">Last</th>
-                                                        <th scope="col">Handle</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <th scope="row">1</th>
-                                                        <td>Mark</td>
-                                                        <td>Otto</td>
-                                                        <td>@mdo</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">2</th>
-                                                        <td>Jacob</td>
-                                                        <td>Thornton</td>
-                                                        <td>@fat</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <th scope="row">3</th>
-                                                        <td>Larry</td>
-                                                        <td>the Bird</td>
-                                                        <td>@twitter</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <table class="table">
-                                    <tbody>
-                                        <tr>
-                                            <td>Vegetables Juices <strong>× 2</strong></td>
-                                            <td>$298.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Orange Sliced Mix <strong>× 2</strong></td>
-                                            <td>$170.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Red Hot Tomato <strong>× 2</strong></td>
-                                            <td>$150.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Shipping and Handing</td>
-                                            <td>$15.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>Tổng tiờn đơn hàng</strong></td>
-                                            <td><strong>$633.00</strong></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-                            </div>
-                        </div>
-                    </div> -->
+                   
                     <div class="col-lg-12">
                         <h4 class="title-2">Tổng số mặt hàng</h4>
-                        <table class="table table-striped table-bordered table-hover">
+                        <table class="table table-striped">
                             <thead>
                                 <tr>
+                                    <th style="width: 30px;"></th>
                                     <th scope="col">Sản phẩm</th>
-                                    <th scope="col">ĝơn giá</th>
+                                    <th scope="col">đơn giá</th>
                                     <th scope="col">Số lượng</th>
-                                    <th scope="col">Thành tiờn</th>
+                                    <th scope="col">Thành tiền</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <th scope="row" colspan="4" style="text-align: left; color: red">Shop: Tên cửa hàng</th>
+                            <tbody ng-repeat="detail in cart.carts | groupBy:'storeid'">
+                                <th scope="row" ng-show="detail.group_by_key" colspan="5" style="text-align: left; color: red">{{detail.product.store.name}}</th>
                                 <div class="card-body">
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
+                                    <tr style="text-align: center;">
+                                        
+                                        <td class="cart-product-image">
+                                            <a href="index/product-detail"><img th:src="@{|/img/product/{{detail.product.images}}|}" alt="{{detail.product.images}}"></a>
+                                        </td>
+                                        <td class="cart-product-info">
+                                            <h4><a href="index/product-detail">{{detail.product.name}}</a></h4>
+                                        </td>
+                                        <td class="cart-product-price">{{detail.product.price}} đ</td>
+                                        <td class="cart-product-quantity">{{detail.quantity}}</td>
+                                        <td class="cart-product-subtotal">{{detail.product.price * detail.quantity}} đ</td>
                                     </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>@fat</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Larry</td>
-                                        <td>the Bird</td>
-                                        <td>@twitter</td>
-                                    </tr>
+                                    
                                 </div>
-                                <th colspan="4" style="text-align: right;">Phí vận chuyển : <b
-                                        style="color: red">....</b></th>
-
-                            </tbody>
-                            <tbody>
-                                <th colspan="4" style="text-align: right;">Tổng tiờn: <b style="color: red">....</b>
-                                </th>
-                            </tbody>
-                            <tbody>
-                                <hr>
-                                <th scope="row" colspan="4" style="text-align: left; color: red">Shop: Tên cửa hàng 2
-                                </th>
-                                <div class="card-body">
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Mark</td>
-                                        <td>Otto</td>
-                                        <td>@mdo</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Jacob</td>
-                                        <td>Thornton</td>
-                                        <td>@fat</td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Larry</td>
-                                        <td>the Bird</td>
-                                        <td>@twitter</td>
-                                    </tr>
-                                    <th colspan="4" style="text-align: right;">Phí vận chuyển : <b
-                                            style="color: red">....</b></th>
-                                </div>
-                            </tbody>
-                            <tbody>
-                                <th colspan="4" style="text-align: right;">Tổng tiờn: <b style="color: red">....</b>
-                                </th>
-                            </tbody>
+                            </tbody>                           
                         </table>
                         <table class="table table-striped table-bordered table-hover bg-light">
                             <tbody>
                                 <tr>
-                                    <td>Tổng tiờn hàng </td>
-                                    <td><strong>$150.00</strong></td>
+                                    <td>Tổng tổng hàng </td>
+                                    <td><strong>{{cart.amount | number : 2}}đ</strong></td>
                                 </tr>
                                 <tr>
                                     <td>Phí vận chuyển</td>
