--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -10,6 +10,11 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
+
 	<!--My's part-->
 <!-- Place favicon.png in the root directory -->
 <link rel="shortcut icon" href="/img/faviconlogo.ico" type="image/x-icon" />
@@ -62,59 +67,7 @@
 	<script src="/js/plugins.js"></script>
 	<!-- Main JS -->
 	<script src="/js/main.js"></script>
-
-	<!-- Code injected by live-server -->
-	<script type="text/javascript">
-		// <![CDATA[  <-- For SVG support
-		if ('WebSocket' in window) {
-			(function() {
-				function refreshCSS() {
-					var sheets = [].slice.call(document
-							.getElementsByTagName("link"));
-					var head = document.getElementsByTagName("head")[0];
-					for (var i = 0; i < sheets.length; ++i) {
-						var elem = sheets[i];
-						var parent = elem.parentElement || head;
-						parent.removeChild(elem);
-						var rel = elem.rel;
-						if (elem.href && typeof rel != "string"
-								|| rel.length == 0
-								|| rel.toLowerCase() == "stylesheet") {
-							var url = elem.href.replace(
-									/(&|\?)_cacheOverride=\d+/, '');
-							elem.href = url
-									+ (url.indexOf('?') >= 0 ? '&' : '?')
-									+ '_cacheOverride='
-									+ (new Date().valueOf());
-						}
-						parent.appendChild(elem);
-					}
-				}
-				var protocol = window.location.protocol === 'http:' ? 'ws://'
-						: 'wss://';
-				var address = protocol + window.location.host
-						+ window.location.pathname + '/ws';
-				var socket = new WebSocket(address);
-				socket.onmessage = function(msg) {
-					if (msg.data == 'reload')
-						window.location.reload();
-					else if (msg.data == 'refreshcss')
-						refreshCSS();
-				};
-				if (sessionStorage
-						&& !sessionStorage
-								.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-					console.log('Live reload enabled.');
-					sessionStorage.setItem(
-							'IsThisFirstTime_Log_From_LiveServer', true);
-				}
-			})();
-		} else {
-			console
-					.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-		}
-		// ]]>
-	</script>
+	
 	<script src="/app_js/buyer.js"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
