--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/add_address.html
@@ -6,30 +6,30 @@
         <div class="tab-pane fade active show">
             <div class="ltn__myaccount-tab-content-inner">
                 <div class="ltn__form-box">
-                    <form action="#" th:action="@{/account/createaddress}" method="post" th:object="${address2}">
+                    <form action="#">
                         <fieldset>
                             <legend>Địa Chỉ</legend>
                             <div class="row">
                                 <div class="col-md-6">
                                     <label>Họ và tên *:</label>
-                                    <input th:field="*{fullname}" type="text">
+                                    <input ng-model="form.fullname" type="text">
                                 </div>
                                 <div class="col-md-6">
                                     <label>Số điện thoại *:</label>
-                                    <input th:field="*{phone}" type="text">
+                                    <input ng-model="form.phone" type="text">
+                                </div>
+                                <div class="col-md-12">
+                                    <label>Địa chỉ cụ thể *:</label>
+                                    <input type="text" ng-model="form.address">
                                 </div>
                                 <!-- <div class="col-md-12">
-                                    <label>Địa chỉ cụ thể *:</label>
-                                    <input type="text" th:field="*{address}">
-                                </div> -->
-                                <div class="col-md-12">
                                     <label>userid:</label>
                                     <input type="text" th:field="*{user}">
-                                </div>
+                                </div> -->
                             </div>
                             <div class="btn-wrapper text-center">
                                 <!-- <a class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit">Lưu Địa Chỉ</a> -->
-                                <button class="btn bg-primary" type="submit">Lưu</button>
+                                <button class="btn bg-primary" type="submit" ng-click="address()">Lưu</button>
                             </div>
                     </form>
                     <!-- <div class="by-agree ">
