--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/edit_address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/edit_address.html
@@ -6,34 +6,36 @@
 	<div class="tab-pane fade active show">
            <div class="ltn__myaccount-tab-content-inner">
                <div class="ltn__form-box">
+                
                        <fieldset>
                            <legend>Địa Chỉ</legend>                         
-                           <div class="row" th:each="add:${adda}">
+                           <div class="row">
                                 <div class="col-md-6">
                                    <label>Họ và tên *:</label>
-                                   <input type="text" th:value="${add.fullname}">
+                                   <input type="text" ng-model="forms.id">
                                 </div>
                                 <div class="col-md-6">
                                     <label>Số điện thoại *:</label>
-                                    <input type="text" th:value="${add.phone}">
+                                    <input type="text" ng-model="forms.phone">
                                  </div>
                                  <div class="col-md-12">
                                     <label>Địa chỉ cụ thể *:</label>
-                                    <input type="text" th:value="${add.address}">
+                                    <input type="text" ng-model="forms.address">
                                  </div>
-                                 <div class="col-md-12">
+                                 <!-- <div class="col-md-12">
                                     <label>user</label>
-                                    <input type="text" th:value="${add.user.userid}">
-                                 </div>
+                                    <input type="hidden" ng-model="form.user">
+                                    <input type="hidden" ng-model="form.id">
+                                 </div> -->
                            </div>
                            <div class="btn-wrapper text-center">
                                <a class="btn theme-btn-1 btn-effect-1 text-uppercase" type="submit">Cập nhật Chỉ</a>
                            </div>
 
-                           <div class="by-agree ">
-                               <!-- <a href="/account/address">TRỞ VỀ</a> -->
-                               <!-- <button ng-click="hello()" type="submit" class="btn btn-primary">helu</button> -->
-                           </div>
+                           <!-- <div class="by-agree ">
+                               <a href="/account/address">TRỞ VỀ</a>
+                               <button ng-click="hello()" type="submit" class="btn btn-primary">helu</button>
+                           </div> -->
                        </fieldset> 
                </div>
            </div>
